--- a/default.env
+++ b/default.env
@@ -1,5 +1,16 @@
-attack_wpa_wordlist=true
+attack_wpa_bruteforce=false
+attack_wpa_bruteforce_mask=?d?d?d?d?d?d?d?d
+
+attack_wpa_wordlist=false
 attack_wpa_wordlist_use_rule_file=false
 attack_wpa_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
-attack_pkmid_bruteforce=true
-attack_pkmid_bruteforce_mask=?d?d?d?d?d?d?d?d
+
+attack_pmkid_bruteforce=false
+attack_pmkid_bruteforce_mask=?d?d?d?d?d?d?d?d
+
+attack_pmkid_wordlist=false
+attack_pmkid_wordlist_use_rule_file=false
+attack_pmkid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
+
+hashcat_print_outfiles=true
+general_log_level=10
