refactoring, before rewriting main routine

--- a/default.env
+++ b/default.env
@@ -2,6 +2,7 @@ attack_wpa_bruteforce=false
 attack_wpa_bruteforce_mask=?d?d?d?d?d?d?d?d
 
 attack_wpa_wordlist=false
+attack_wpa_wordlist_file_path=/usr/local/share/doc/hashcat/example.dict
 attack_wpa_wordlist_use_rule_file=false
 attack_wpa_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
 
@@ -9,6 +10,7 @@ attack_pmkid_bruteforce=false
 attack_pmkid_bruteforce_mask=?d?d?d?d?d?d?d?d
 
 attack_pmkid_wordlist=false
+attack_pmkid_wordlist_file_path=/usr/local/share/doc/hashcat/example.dict
 attack_pmkid_wordlist_use_rule_file=false
 attack_pmkid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
 
