resoved the bugs i implemented

--- a/user.env
+++ b/user.env
@@ -1,2 +1,4 @@
 attack_wpa_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/rockyou.txt
+attack_wpa_wordlist=true
+attack_pmkid_wordlist=true
 general_log_level=20
