implemented progress tracking

--- a/default.env
+++ b/default.env
@@ -14,5 +14,7 @@ attack_pmkid_wordlist_file_path=/usr/local/share/doc/hashcat/example.dict
 attack_pmkid_wordlist_use_rule_file=false
 attack_pmkid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
 
+progress_ignore_already_processed_files=false
+
 hashcat_print_outfiles=true
-general_log_level=10
+general_log_level=20
