--- a/user.env
+++ b/user.env
@@ -1,4 +1,5 @@
-attack_wpa_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/rockyou.txt
+attack_wpa_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/top-62-wpa.dict
 attack_wpa_wordlist=true
 attack_pmkid_wordlist=true
-general_log_level=20
+general_log_level=10
+progress_ignore_already_processed_files=true
