--- a/user.env
+++ b/user.env
@@ -1,5 +1,12 @@
-attack_wpa_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/top-62-wpa.dict
 attack_wpa_wordlist=true
+attack_wpa_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/top-4800-wpa.dict
+attack_wpa_wordlist_use_rule_file=true
+attack_wpa_wordlist_rule_file_path=/root/mbudget0x01/handshakeparser/rules/best64.rule
+
 attack_pmkid_wordlist=true
-general_log_level=10
+attack_pmkid_wordlist_file_path=/root/mbudget0x01/handshakeparser/wordlists/top-4800-wpa.dict
+attack_pmkid_wordlist_use_rule_file=true
+attack_pmkid_wordlist_rule_file_path=/root/mbudget0x01/handshakeparser/rules/best64.rule
+
+general_log_level=20
 progress_ignore_already_processed_files=true
