--- a/default.env
+++ b/default.env
@@ -18,3 +18,4 @@ progress_ignore_already_processed_files=false
 
 hashcat_print_outfiles=true
 general_log_level=20
+general_log_location=/var/log/mbudget0x01-pwnagotchi-util.log
