--- a/default.env
+++ b/default.env
@@ -6,6 +6,10 @@ attack_wpa_wordlist_file_path=/usr/local/share/doc/hashcat/example.dict
 attack_wpa_wordlist_use_rule_file=false
 attack_wpa_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
 
+attack_wpa_ssid_wordlist=false
+attack_wpa_ssid_wordlist_use_rule_file=false
+attack_wpa_ssid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
+
 attack_pmkid_bruteforce=false
 attack_pmkid_bruteforce_mask=?d?d?d?d?d?d?d?d
 
@@ -13,6 +17,10 @@ attack_pmkid_wordlist=false
 attack_pmkid_wordlist_file_path=/usr/local/share/doc/hashcat/example.dict
 attack_pmkid_wordlist_use_rule_file=false
 attack_pmkid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
+
+attack_pmkid_ssid_wordlist=false
+attack_pmkid_ssid_wordlist_use_rule_file=false
+attack_pmkid_ssid_wordlist_rule_file_path=/usr/local/share/doc/hashcat/example.dict
 
 progress_ignore_already_processed_files=false
 
