--- a/default.env
+++ b/default.env
@@ -30,3 +30,4 @@ general_log_location=/var/log/mbudget0x01-pwnagotchi-util.log
 
 general_cleanup_intermediates=true
 general_cleanup_input=true
+general_cleanup_input_only_successfull=true
