--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-/*.bat
-/input/*
-!/input/placeholder
-wordlists/*
-!wordlists/placeholder
-rules/*
-!rules/placeholder
+*.bat
+docker/worker/input/*
+!docker/worker/input/placeholder
+docker/worker/wordlists/*
+!docker/worker/wordlists/placeholder
+docker/worker/rules/*
+!docker/worker/rules/placeholder
+docker/input/*
+!docker/input/placeholder
+docker/wordlists/*
+!docker/wordlists/placeholder
+docker/rules/*
+!docker/rules/placeholder
 .vscode/*
 /data
 __pycache__
 /test
 test.env
+/python/packages/coordinator_api/server/test
